@@ -1,3 +1,10 @@
+1999-01-21  James Henstridge  <james@daa.com.au>
+
+	* examples/testgtk/testgtk.py (create_scrolled_windows): changed
+	a call to GtkContainer.add to GtkScrolledWindow.add_with_viewport.
+
+	* gtk.py (GtkPacker.add): Added defaults for the arguments.
+
 1999-01-11  James Henstridge  <james@daa.com.au>
 
 	* gtk.py (GtkProgress.get_current_percentage): fixed function call
